--- a/src/pages/insights/test1234.md
+++ b/src/pages/insights/test1234.md
@@ -12,6 +12,7 @@ no_index: false
 primary_tag: lorem-ipsum
 template: post
 image: images/1.jpg
+thumb_image: images/11_thumb.jpg
 ---
 ## Lorem ipsum
 
